parser.output
Terminals unused in grammar

   TOKEN_KW_AUTO
   TOKEN_KW_WHILE
   TOKEN_ERROR


Grammar

    0 $accept: prog $end

    1 prog: opt_decl_list

    2 expr: expr1
    3     | TOKEN_LEFT_CURLY_BRACKET expr_list TOKEN_RIGHT_CURLY_BRACKET

    4 expr1: expr2 TOKEN_EQUALS expr1
    5      | expr2

    6 expr2: expr2 TOKEN_OR expr3
    7      | expr3

    8 expr3: expr3 TOKEN_AND expr4
    9      | expr4

   10 expr4: expr4 TOKEN_LESS expr5
   11      | expr4 TOKEN_LESS_EQUAL expr5
   12      | expr4 TOKEN_GREATER expr5
   13      | expr4 TOKEN_GREATER_EQUAL expr5
   14      | expr4 TOKEN_EQUALS_EQUALS expr5
   15      | expr4 TOKEN_NOT_EQUALS expr5
   16      | expr5

   17 expr5: expr5 TOKEN_PLUS expr6
   18      | expr5 TOKEN_MINUS expr6
   19      | expr6

   20 expr6: expr6 TOKEN_MULTIPLY expr7
   21      | expr6 TOKEN_DIVIDE expr7
   22      | expr6 TOKEN_MOD expr7
   23      | expr7

   24 expr7: expr7 TOKEN_EXPONENT expr8
   25      | expr8

   26 expr8: TOKEN_MINUS expr9
   27      | TOKEN_NOT expr9
   28      | expr9

   29 expr9: atomic TOKEN_PLUS_PLUS
   30      | atomic TOKEN_MINUS_MINUS
   31      | atomic

   32 atomic: TOKEN_IDENTIFIER
   33       | TOKEN_INTEGER
   34       | TOKEN_FLOAT
   35       | TOKEN_STRING
   36       | TOKEN_CHAR
   37       | TOKEN_KW_TRUE
   38       | TOKEN_KW_FALSE
   39       | TOKEN_LEFT_PARENTHESES expr TOKEN_RIGHT_PARENTHESES
   40       | TOKEN_IDENTIFIER TOKEN_LEFT_BRACKET opt_expr TOKEN_RIGHT_BRACKET
   41       | TOKEN_IDENTIFIER TOKEN_LEFT_PARENTHESES opt_expr_list TOKEN_RIGHT_PARENTHESES

   42 opt_expr: expr
   43         | %empty

   44 opt_expr_list: expr_list
   45              | %empty

   46 expr_list: expr_list TOKEN_COMMA expr
   47          | expr

   48 type: TOKEN_KW_INTEGER
   49     | TOKEN_KW_BOOLEAN
   50     | TOKEN_KW_CHAR
   51     | TOKEN_KW_FLOAT
   52     | TOKEN_KW_STRING
   53     | TOKEN_KW_VOID
   54     | TOKEN_KW_ARRAY TOKEN_LEFT_BRACKET opt_expr TOKEN_RIGHT_BRACKET type
   55     | TOKEN_KW_FUNCTION type TOKEN_LEFT_PARENTHESES opt_param_list TOKEN_RIGHT_PARENTHESES

   56 decl: TOKEN_IDENTIFIER TOKEN_COLON type init TOKEN_SEMICOLON
   57     | TOKEN_IDENTIFIER TOKEN_COLON type func_init

   58 init: TOKEN_EQUALS expr
   59     | %empty

   60 func_init: TOKEN_EQUALS TOKEN_LEFT_CURLY_BRACKET stmt_list TOKEN_RIGHT_CURLY_BRACKET

   61 decl_list: decl_list decl
   62          | decl

   63 opt_decl_list: decl_list
   64              | %empty

   65 param: TOKEN_IDENTIFIER TOKEN_COLON type

   66 param_list: param_list TOKEN_COMMA param
   67           | param

   68 opt_param_list: param_list
   69               | %empty

   70 stmt: decl
   71     | TOKEN_KW_RETURN opt_expr TOKEN_SEMICOLON
   72     | TOKEN_KW_PRINT opt_expr_list TOKEN_SEMICOLON
   73     | expr TOKEN_SEMICOLON
   74     | TOKEN_LEFT_CURLY_BRACKET stmt_list TOKEN_RIGHT_CURLY_BRACKET
   75     | TOKEN_KW_FOR TOKEN_LEFT_PARENTHESES opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RIGHT_PARENTHESES stmt
   76     | TOKEN_KW_IF TOKEN_LEFT_PARENTHESES expr TOKEN_RIGHT_PARENTHESES stmt
   77     | TOKEN_KW_IF TOKEN_LEFT_PARENTHESES expr TOKEN_RIGHT_PARENTHESES else_stmt TOKEN_KW_ELSE stmt

   78 else_stmt: TOKEN_KW_IF TOKEN_LEFT_PARENTHESES expr TOKEN_RIGHT_PARENTHESES else_stmt TOKEN_KW_ELSE else_stmt
   79          | TOKEN_KW_RETURN opt_expr TOKEN_SEMICOLON
   80          | TOKEN_KW_PRINT opt_expr_list TOKEN_SEMICOLON
   81          | expr TOKEN_SEMICOLON
   82          | TOKEN_LEFT_CURLY_BRACKET stmt_list TOKEN_RIGHT_CURLY_BRACKET
   83          | TOKEN_KW_FOR TOKEN_LEFT_PARENTHESES opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RIGHT_PARENTHESES else_stmt

   84 stmt_list: stmt_list stmt
   85          | stmt


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_LEFT_PARENTHESES (258) 39 41 55 75 76 77 78 83
TOKEN_RIGHT_PARENTHESES (259) 39 41 55 75 76 77 78 83
TOKEN_LEFT_BRACKET (260) 40 54
TOKEN_RIGHT_BRACKET (261) 40 54
TOKEN_LEFT_CURLY_BRACKET (262) 3 60 74 82
TOKEN_RIGHT_CURLY_BRACKET (263) 3 60 74 82
TOKEN_COMMA (264) 46 66
TOKEN_SEMICOLON (265) 56 71 72 73 75 79 80 81 83
TOKEN_COLON (266) 56 57 65
TOKEN_PLUS_PLUS (267) 29
TOKEN_MINUS_MINUS (268) 30
TOKEN_EQUALS_EQUALS (269) 14
TOKEN_NOT_EQUALS (270) 15
TOKEN_NOT (271) 27
TOKEN_PLUS (272) 17
TOKEN_MINUS (273) 18 26
TOKEN_DIVIDE (274) 21
TOKEN_MULTIPLY (275) 20
TOKEN_MOD (276) 22
TOKEN_EXPONENT (277) 24
TOKEN_EQUALS (278) 4 58 60
TOKEN_GREATER_EQUAL (279) 13
TOKEN_LESS_EQUAL (280) 11
TOKEN_GREATER (281) 12
TOKEN_LESS (282) 10
TOKEN_AND (283) 8
TOKEN_OR (284) 6
TOKEN_KW_ARRAY (285) 54
TOKEN_KW_AUTO (286)
TOKEN_KW_BOOLEAN (287) 49
TOKEN_KW_CHAR (288) 50
TOKEN_KW_ELSE (289) 77 78
TOKEN_KW_FALSE (290) 38
TOKEN_KW_FLOAT (291) 51
TOKEN_KW_FOR (292) 75 83
TOKEN_KW_FUNCTION (293) 55
TOKEN_KW_IF (294) 76 77 78
TOKEN_KW_INTEGER (295) 48
TOKEN_KW_PRINT (296) 72 80
TOKEN_KW_RETURN (297) 71 79
TOKEN_KW_STRING (298) 52
TOKEN_KW_TRUE (299) 37
TOKEN_KW_VOID (300) 53
TOKEN_KW_WHILE (301)
TOKEN_ERROR (302)
TOKEN_INTEGER (303) 33
TOKEN_FLOAT (304) 34
TOKEN_CHAR (305) 36
TOKEN_STRING (306) 35
TOKEN_IDENTIFIER (307) 32 40 41 56 57 65


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
prog (54)
    on left: 1, on right: 0
expr (55)
    on left: 2 3, on right: 39 42 46 47 58 73 76 77 78 81
expr1 (56)
    on left: 4 5, on right: 2 4
expr2 (57)
    on left: 6 7, on right: 4 5 6
expr3 (58)
    on left: 8 9, on right: 6 7 8
expr4 (59)
    on left: 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13 14 15
expr5 (60)
    on left: 17 18 19, on right: 10 11 12 13 14 15 16 17 18
expr6 (61)
    on left: 20 21 22 23, on right: 17 18 19 20 21 22
expr7 (62)
    on left: 24 25, on right: 20 21 22 23 24
expr8 (63)
    on left: 26 27 28, on right: 24 25
expr9 (64)
    on left: 29 30 31, on right: 26 27 28
atomic (65)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 29 30 31
opt_expr (66)
    on left: 42 43, on right: 40 54 71 75 79 83
opt_expr_list (67)
    on left: 44 45, on right: 41 72 80
expr_list (68)
    on left: 46 47, on right: 3 44 46
type (69)
    on left: 48 49 50 51 52 53 54 55, on right: 54 55 56 57 65
decl (70)
    on left: 56 57, on right: 61 62 70
init (71)
    on left: 58 59, on right: 56
func_init (72)
    on left: 60, on right: 57
decl_list (73)
    on left: 61 62, on right: 61 63
opt_decl_list (74)
    on left: 63 64, on right: 1
param (75)
    on left: 65, on right: 66 67
param_list (76)
    on left: 66 67, on right: 66 68
opt_param_list (77)
    on left: 68 69, on right: 55
stmt (78)
    on left: 70 71 72 73 74 75 76 77, on right: 75 76 77 84 85
else_stmt (79)
    on left: 78 79 80 81 82 83, on right: 77 78 83
stmt_list (80)
    on left: 84 85, on right: 60 74 82 84


State 0

    0 $accept: . prog $end

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 64 (opt_decl_list)

    prog           go to state 2
    decl           go to state 3
    decl_list      go to state 4
    opt_decl_list  go to state 5


State 1

   56 decl: TOKEN_IDENTIFIER . TOKEN_COLON type init TOKEN_SEMICOLON
   57     | TOKEN_IDENTIFIER . TOKEN_COLON type func_init

    TOKEN_COLON  shift, and go to state 6


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 7


State 3

   62 decl_list: decl .

    $default  reduce using rule 62 (decl_list)


State 4

   61 decl_list: decl_list . decl
   63 opt_decl_list: decl_list .

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 63 (opt_decl_list)

    decl  go to state 8


State 5

    1 prog: opt_decl_list .

    $default  reduce using rule 1 (prog)


State 6

   56 decl: TOKEN_IDENTIFIER TOKEN_COLON . type init TOKEN_SEMICOLON
   57     | TOKEN_IDENTIFIER TOKEN_COLON . type func_init

    TOKEN_KW_ARRAY     shift, and go to state 9
    TOKEN_KW_BOOLEAN   shift, and go to state 10
    TOKEN_KW_CHAR      shift, and go to state 11
    TOKEN_KW_FLOAT     shift, and go to state 12
    TOKEN_KW_FUNCTION  shift, and go to state 13
    TOKEN_KW_INTEGER   shift, and go to state 14
    TOKEN_KW_STRING    shift, and go to state 15
    TOKEN_KW_VOID      shift, and go to state 16

    type  go to state 17


State 7

    0 $accept: prog $end .

    $default  accept


State 8

   61 decl_list: decl_list decl .

    $default  reduce using rule 61 (decl_list)


State 9

   54 type: TOKEN_KW_ARRAY . TOKEN_LEFT_BRACKET opt_expr TOKEN_RIGHT_BRACKET type

    TOKEN_LEFT_BRACKET  shift, and go to state 18


State 10

   49 type: TOKEN_KW_BOOLEAN .

    $default  reduce using rule 49 (type)


State 11

   50 type: TOKEN_KW_CHAR .

    $default  reduce using rule 50 (type)


State 12

   51 type: TOKEN_KW_FLOAT .

    $default  reduce using rule 51 (type)


State 13

   55 type: TOKEN_KW_FUNCTION . type TOKEN_LEFT_PARENTHESES opt_param_list TOKEN_RIGHT_PARENTHESES

    TOKEN_KW_ARRAY     shift, and go to state 9
    TOKEN_KW_BOOLEAN   shift, and go to state 10
    TOKEN_KW_CHAR      shift, and go to state 11
    TOKEN_KW_FLOAT     shift, and go to state 12
    TOKEN_KW_FUNCTION  shift, and go to state 13
    TOKEN_KW_INTEGER   shift, and go to state 14
    TOKEN_KW_STRING    shift, and go to state 15
    TOKEN_KW_VOID      shift, and go to state 16

    type  go to state 19


State 14

   48 type: TOKEN_KW_INTEGER .

    $default  reduce using rule 48 (type)


State 15

   52 type: TOKEN_KW_STRING .

    $default  reduce using rule 52 (type)


State 16

   53 type: TOKEN_KW_VOID .

    $default  reduce using rule 53 (type)


State 17

   56 decl: TOKEN_IDENTIFIER TOKEN_COLON type . init TOKEN_SEMICOLON
   57     | TOKEN_IDENTIFIER TOKEN_COLON type . func_init

    TOKEN_EQUALS  shift, and go to state 20

    $default  reduce using rule 59 (init)

    init       go to state 21
    func_init  go to state 22


State 18

   54 type: TOKEN_KW_ARRAY TOKEN_LEFT_BRACKET . opt_expr TOKEN_RIGHT_BRACKET type

    TOKEN_LEFT_PARENTHESES    shift, and go to state 23
    TOKEN_LEFT_CURLY_BRACKET  shift, and go to state 24
    TOKEN_NOT                 shift, and go to state 25
    TOKEN_MINUS               shift, and go to state 26
    TOKEN_KW_FALSE            shift, and go to state 27
    TOKEN_KW_TRUE             shift, and go to state 28
    TOKEN_INTEGER             shift, and go to state 29
    TOKEN_FLOAT               shift, and go to state 30
    TOKEN_CHAR                shift, and go to state 31
    TOKEN_STRING              shift, and go to state 32
    TOKEN_IDENTIFIER          shift, and go to state 33

    $default  reduce using rule 43 (opt_expr)

    expr      go to state 34
    expr1     go to state 35
    expr2     go to state 36
    expr3     go to state 37
    expr4     go to state 38
    expr5     go to state 39
    expr6     go to state 40
    expr7     go to state 41
    expr8     go to state 42
    expr9     go to state 43
    atomic    go to state 44
    opt_expr  go to state 45


State 19

   55 type: TOKEN_KW_FUNCTION type . TOKEN_LEFT_PARENTHESES opt_param_list TOKEN_RIGHT_PARENTHESES

    TOKEN_LEFT_PARENTHESES  shift, and go to state 46


State 20

   58 init: TOKEN_EQUALS . expr
   60 func_init: TOKEN_EQUALS . TOKEN_LEFT_CURLY_BRACKET stmt_list TOKEN_RIGHT_CURLY_BRACKET

    TOKEN_LEFT_PARENTHESES    shift, and go to state 23
    TOKEN_LEFT_CURLY_BRACKET  shift, and go to state 47
    TOKEN_NOT                 shift, and go to state 25
    TOKEN_MINUS               shift, and go to state 26
    TOKEN_KW_FALSE            shift, and go to state 27
    TOKEN_KW_TRUE             shift, and go to state 28
    TOKEN_INTEGER             shift, and go to state 29
    TOKEN_FLOAT               shift, and go to state 30
    TOKEN_CHAR                shift, and go to state 31
    TOKEN_STRING              shift, and go to state 32
    TOKEN_IDENTIFIER          shift, and go to state 33

    expr    go to state 48
    expr1   go to state 35
    expr2   go to state 36
    expr3   go to state 37
    expr4   go to state 38
    expr5   go to state 39
    expr6   go to state 40
    expr7   go to state 41
    expr8   go to state 42
    expr9   go to state 43
    atomic  go to state 44


State 21

   56 decl: TOKEN_IDENTIFIER TOKEN_COLON type init . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 49


State 22

   57 decl: TOKEN_IDENTIFIER TOKEN_COLON type func_init .

    $default  reduce using rule 57 (decl)


State 23

   39 atomic: TOKEN_LEFT_PARENTHESES . expr TOKEN_RIGHT_PARENTHESES

    TOKEN_LEFT_PARENTHESES    shift, and go to state 23
    TOKEN_LEFT_CURLY_BRACKET  shift, and go to state 24
    TOKEN_NOT                 shift, and go to state 25
    TOKEN_MINUS               shift, and go to state 26
    TOKEN_KW_FALSE            shift, and go to state 27
    TOKEN_KW_TRUE             shift, and go to state 28
    TOKEN_INTEGER             shift, and go to state 29
    TOKEN_FLOAT               shift, and go to state 30
    TOKEN_CHAR                shift, and go to state 31
    TOKEN_STRING              shift, and go to state 32
    TOKEN_IDENTIFIER          shift, and go to state 33

    expr    go to state 50
    expr1   go to state 35
    expr2   go to state 36
    expr3   go to state 37
    expr4   go to state 38
    expr5   go to state 39
    expr6   go to state 40
    expr7   go to state 41
    expr8   go to state 42
    expr9   go to state 43
    atomic  go to state 44


State 24

    3 expr: TOKEN_LEFT_CURLY_BRACKET . expr_list TOKEN_RIGHT_CURLY_BRACKET

    TOKEN_LEFT_PARENTHESES    shift, and go to state 23
    TOKEN_LEFT_CURLY_BRACKET  shift, and go to state 24
    TOKEN_NOT                 shift, and go to state 25
    TOKEN_MINUS               shift, and go to state 26
    TOKEN_KW_FALSE            shift, and go to state 27
    TOKEN_KW_TRUE             shift, and go to state 28
    TOKEN_INTEGER             shift, and go to state 29
    TOKEN_FLOAT               shift, and go to state 30
    TOKEN_CHAR                shift, and go to state 31
    TOKEN_STRING              shift, and go to state 32
    TOKEN_IDENTIFIER          shift, and go to state 33

    expr       go to state 51
    expr1      go to state 35
    expr2      go to state 36
    expr3      go to state 37
    expr4      go to state 38
    expr5      go to state 39
    expr6      go to state 40
    expr7      go to state 41
    expr8      go to state 42
    expr9      go to state 43
    atomic     go to state 44
    expr_list  go to state 52


State 25

   27 expr8: TOKEN_NOT . expr9

    TOKEN_LEFT_PARENTHESES  shift, and go to state 23
    TOKEN_KW_FALSE          shift, and go to state 27
    TOKEN_KW_TRUE           shift, and go to state 28
    TOKEN_INTEGER           shift, and go to state 29
    TOKEN_FLOAT             shift, and go to state 30
    TOKEN_CHAR              shift, and go to state 31
    TOKEN_STRING            shift, and go to state 32
    TOKEN_IDENTIFIER        shift, and go to state 33

    expr9   go to state 53
    atomic  go to state 44


State 26

   26 expr8: TOKEN_MINUS . expr9

    TOKEN_LEFT_PARENTHESES  shift, and go to state 23
    TOKEN_KW_FALSE          shift, and go to state 27
    TOKEN_KW_TRUE           shift, and go to state 28
    TOKEN_INTEGER           shift, and go to state 29
    TOKEN_FLOAT             shift, and go to state 30
    TOKEN_CHAR              shift, and go to state 31
    TOKEN_STRING            shift, and go to state 32
    TOKEN_IDENTIFIER        shift, and go to state 33

    expr9   go to state 54
    atomic  go to state 44


State 27

   38 atomic: TOKEN_KW_FALSE .

    $default  reduce using rule 38 (atomic)


State 28

   37 atomic: TOKEN_KW_TRUE .

    $default  reduce using rule 37 (atomic)


State 29

   33 atomic: TOKEN_INTEGER .

    $default  reduce using rule 33 (atomic)


State 30

   34 atomic: TOKEN_FLOAT .

    $default  reduce using rule 34 (atomic)


State 31

   36 atomic: TOKEN_CHAR .

    $default  reduce using rule 36 (atomic)


State 32

   35 atomic: TOKEN_STRING .

    $default  reduce using rule 35 (atomic)


State 33

   32 atomic: TOKEN_IDENTIFIER .
   40       | TOKEN_IDENTIFIER . TOKEN_LEFT_BRACKET opt_expr TOKEN_RIGHT_BRACKET
   41       | TOKEN_IDENTIFIER . TOKEN_LEFT_PARENTHESES opt_expr_list TOKEN_RIGHT_PARENTHESES

    TOKEN_LEFT_PARENTHESES  shift, and go to state 55
    TOKEN_LEFT_BRACKET      shift, and go to state 56

    $default  reduce using rule 32 (atomic)


State 34

   42 opt_expr: expr .

    $default  reduce using rule 42 (opt_expr)


State 35

    2 expr: expr1 .

    $default  reduce using rule 2 (expr)


State 36

    4 expr1: expr2 . TOKEN_EQUALS expr1
    5      | expr2 .
    6 expr2: expr2 . TOKEN_OR expr3

    TOKEN_EQUALS  shift, and go to state 57
    TOKEN_OR      shift, and go to state 58

    $default  reduce using rule 5 (expr1)


State 37

    7 expr2: expr3 .
    8 expr3: expr3 . TOKEN_AND expr4

    TOKEN_AND  shift, and go to state 59

    $default  reduce using rule 7 (expr2)


State 38

    9 expr3: expr4 .
   10 expr4: expr4 . TOKEN_LESS expr5
   11      | expr4 . TOKEN_LESS_EQUAL expr5
   12      | expr4 . TOKEN_GREATER expr5
   13      | expr4 . TOKEN_GREATER_EQUAL expr5
   14      | expr4 . TOKEN_EQUALS_EQUALS expr5
   15      | expr4 . TOKEN_NOT_EQUALS expr5

    TOKEN_EQUALS_EQUALS  shift, and go to state 60
    TOKEN_NOT_EQUALS     shift, and go to state 61
    TOKEN_GREATER_EQUAL  shift, and go to state 62
    TOKEN_LESS_EQUAL     shift, and go to state 63
    TOKEN_GREATER        shift, and go to state 64
    TOKEN_LESS           shift, and go to state 65

    $default  reduce using rule 9 (expr3)


State 39

   16 expr4: expr5 .
   17 expr5: expr5 . TOKEN_PLUS expr6
   18      | expr5 . TOKEN_MINUS expr6

    TOKEN_PLUS   shift, and go to state 66
    TOKEN_MINUS  shift, and go to state 67

    $default  reduce using rule 16 (expr4)


State 40

   19 expr5: expr6 .
   20 expr6: expr6 . TOKEN_MULTIPLY expr7
   21      | expr6 . TOKEN_DIVIDE expr7
   22      | expr6 . TOKEN_MOD expr7

    TOKEN_DIVIDE    shift, and go to state 68
    TOKEN_MULTIPLY  shift, and go to state 69
    TOKEN_MOD       shift, and go to state 70

    $default  reduce using rule 19 (expr5)


State 41

   23 expr6: expr7 .
   24 expr7: expr7 . TOKEN_EXPONENT expr8

    TOKEN_EXPONENT  shift, and go to state 71

    $default  reduce using rule 23 (expr6)


State 42

   25 expr7: expr8 .

    $default  reduce using rule 25 (expr7)


State 43

   28 expr8: expr9 .

    $default  reduce using rule 28 (expr8)


State 44

   29 expr9: atomic . TOKEN_PLUS_PLUS
   30      | atomic . TOKEN_MINUS_MINUS
   31      | atomic .

    TOKEN_PLUS_PLUS    shift, and go to state 72
    TOKEN_MINUS_MINUS  shift, and go to state 73

    $default  reduce using rule 31 (expr9)


State 45

   54 type: TOKEN_KW_ARRAY TOKEN_LEFT_BRACKET opt_expr . TOKEN_RIGHT_BRACKET type

    TOKEN_RIGHT_BRACKET  shift, and go to state 74


State 46

   55 type: TOKEN_KW_FUNCTION type TOKEN_LEFT_PARENTHESES . opt_param_list TOKEN_RIGHT_PARENTHESES

    TOKEN_IDENTIFIER  shift, and go to state 75

    $default  reduce using rule 69 (opt_param_list)

    param           go to state 76
    param_list      go to state 77
    opt_param_list  go to state 78


State 47

    3 expr: TOKEN_LEFT_CURLY_BRACKET . expr_list TOKEN_RIGHT_CURLY_BRACKET
   60 func_init: TOKEN_EQUALS TOKEN_LEFT_CURLY_BRACKET . stmt_list TOKEN_RIGHT_CURLY_BRACKET

    TOKEN_LEFT_PARENTHESES    shift, and go to state 23
    TOKEN_LEFT_CURLY_BRACKET  shift, and go to state 79
    TOKEN_NOT                 shift, and go to state 25
    TOKEN_MINUS               shift, and go to state 26
    TOKEN_KW_FALSE            shift, and go to state 27
    TOKEN_KW_FOR              shift, and go to state 80
    TOKEN_KW_IF               shift, and go to state 81
    TOKEN_KW_PRINT            shift, and go to state 82
    TOKEN_KW_RETURN           shift, and go to state 83
    TOKEN_KW_TRUE             shift, and go to state 28
    TOKEN_INTEGER             shift, and go to state 29
    TOKEN_FLOAT               shift, and go to state 30
    TOKEN_CHAR                shift, and go to state 31
    TOKEN_STRING              shift, and go to state 32
    TOKEN_IDENTIFIER          shift, and go to state 84

    expr       go to state 85
    expr1      go to state 35
    expr2      go to state 36
    expr3      go to state 37
    expr4      go to state 38
    expr5      go to state 39
    expr6      go to state 40
    expr7      go to state 41
    expr8      go to state 42
    expr9      go to state 43
    atomic     go to state 44
    expr_list  go to state 52
    decl       go to state 86
    stmt       go to state 87
    stmt_list  go to state 88


State 48

   58 init: TOKEN_EQUALS expr .

    $default  reduce using rule 58 (init)


State 49

   56 decl: TOKEN_IDENTIFIER TOKEN_COLON type init TOKEN_SEMICOLON .

    $default  reduce using rule 56 (decl)


State 50

   39 atomic: TOKEN_LEFT_PARENTHESES expr . TOKEN_RIGHT_PARENTHESES

    TOKEN_RIGHT_PARENTHESES  shift, and go to state 89


State 51

   47 expr_list: expr .

    $default  reduce using rule 47 (expr_list)


State 52

    3 expr: TOKEN_LEFT_CURLY_BRACKET expr_list . TOKEN_RIGHT_CURLY_BRACKET
   46 expr_list: expr_list . TOKEN_COMMA expr

    TOKEN_RIGHT_CURLY_BRACKET  shift, and go to state 90
    TOKEN_COMMA                shift, and go to state 91


State 53

   27 expr8: TOKEN_NOT expr9 .

    $default  reduce using rule 27 (expr8)


State 54

   26 expr8: TOKEN_MINUS expr9 .

    $default  reduce using rule 26 (expr8)


State 55

   41 atomic: TOKEN_IDENTIFIER TOKEN_LEFT_PARENTHESES . opt_expr_list TOKEN_RIGHT_PARENTHESES
